# glue-openspace

./: .gitignore  README.rst  requirements.txt  setup.cfg  tmpfile
glue_openspace_thesis/: __init__.py  layer_artist.py  layer_state.py  layer_state_widget.py  layer_state_widget.ui  simp.py  utils.py  viewer.py  viewer_state.py  viewer_state_widget.py  viewer_state_widget.ui
glue_openspace_thesis/tests/: test_layer_artist.py  test_simp.py  test_viewer.py
