[metadata]
name = glue-openspace-thesis
author = Thomas Robitaille, Victor Lindquist, Jacob Molin
author_email = thomas.robitaille@gmail.com, victor.lindqvist@outlook.com, jacob.cb.molin@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/OpenSpace/glue-openspace
description = Glue OpenSpace plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=2.7
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    glue-core>=0.15
    qtpy
    astropy
    matplotlib

[options.package_data]
glue_openspace_thesis = *.ui, *.html, *.js, *.png

[options.entry_points]
glue.plugins =
    openspacethesis = glue_openspace_thesis:setup

[options.extras_require]
test =
    pytest
qt =
    PyQt5;python_version>="3"